--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,7 @@ main{
   position: absolute;
   color: white;
   font-size: xx-large;
+  font-family: 'Josefin Sans', sans-serif;
   height: 200vh;
   nav{
     border:2px white solid;
