--- a/style.scss
+++ b/style.scss
@@ -96,12 +96,8 @@ main{
 .scala{background-image: linear-gradient(to right,#000000 0%,#000000 30%,white 30%, white 100%)}
 .cpp{background-image: linear-gradient(to right,#000000 0%,#000000 20%,white 20%, white 100%)}
 
-@media only screen and (max-width: 1000px) {
-  #about, #projects, #cv, #contact{
-    width: 50vw;
-  }
-}
 form{
+  margin-top: 20px;
   display:flex;
   flex-direction: column;
   input,input:focus,textarea,button{border: none;}
@@ -127,6 +123,8 @@ form{
     padding-bottom: 10px;
   }
   button{
+    font-weight:800;
+    color:#4c4cfc;
     margin-top: 20px;
   }
   input:focus{outline:0;}
@@ -146,4 +144,29 @@ a:hover .description{
   overflow: hidden;
   transition: max-height 0.6s ease-in-out;
   transition-delay: 0.1s;
+}
+
+@media (max-width: 1000px) {
+  #about, #projects, #cv, #contact{
+    width: 50vw;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  #about, #projects, #cv, #contact{
+    width: 100vw;
+  }
+  main{
+    font-size: 5vw;
+    .name-wrapper{
+      height: auto;
+    }
+    nav{
+      display: none;
+    }
+    .js,.python,.java,.scala,.cpp{
+      width: 40vw;
+      height: 5vw;
+    }
+  }
 }
