--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,7 @@ form{
   flex-direction: column;
   input,input:focus,textarea,button{border: none;}
   textarea{
+    width: 80%;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     min-height: 200px;
@@ -155,14 +156,17 @@ a:hover .description{
 @media screen and (max-width: 760px) {
   #about, #projects, #cv, #contact{width: 100vw;}
   main{
-    font-size: 22px;
+    font-size: 5vw;
     nav{display: none;}
     .js,.python,.java,.scala,.cpp{
       width: 200px;
       height: 5vw;
     }
-    #cv .subsection .divider{ width: 100%; }
+    #cv .subsection .divider{ width: 80%; }
     .empty-block:first-child{height: 100vh;}
     .empty-block{height: 0px;}
+    .text{
+      margin-right: 60px;
+    }
   }
 }
