--- a/style.css
+++ b/style.css
@@ -202,16 +202,18 @@ a:hover .description {
 }
 @media screen and (max-width: 760px) {
   #about, #projects, #cv, #contact {
-    width: 100vw;
+    width: auto;
   }
   main {
     font-size: 5vw;
   }
   main nav {
+    width: 0px;
+    height: 0px;
     display: none;
   }
   main .js, main .python, main .java, main .scala, main .cpp {
-    width: 200px;
+    width: 50%;
     height: 5vw;
   }
   main #cv .subsection .divider {
