--- a/style.css
+++ b/style.css
@@ -195,6 +195,10 @@ a:hover .description {
   transition-delay: 0.1s;
 }
 
+.mobile-arrow {
+  display: none;
+}
+
 @media (max-width: 1000px) {
   #about, #projects, #cv, #contact {
     width: 50vw;
@@ -224,5 +228,38 @@ a:hover .description {
   }
   main .text {
     margin-right: 60px;
+  }
+  .mobile-arrow {
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 32px solid white;
+    position: absolute;
+    left: calc(50% - 20px);
+    top: calc(100vh - 60px);
+    -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
+            animation: downarrow 0.6s infinite alternate ease-in-out;
+  }
+}
+@-webkit-keyframes downarrow {
+  0% {
+    -webkit-transform: translateY(0);
+    opacity: 0.7;
+  }
+  100% {
+    -webkit-transform: translateY(0.8em);
+    opacity: 1;
+  }
+}
+@keyframes downarrow {
+  0% {
+    -webkit-transform: translateY(0);
+    opacity: 0.7;
+  }
+  100% {
+    -webkit-transform: translateY(0.8em);
+    opacity: 1;
   }
 }/*# sourceMappingURL=style.css.map */
