--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ html {
 main {
   position: absolute;
   color: white;
-  font-size: xx-large;
   font-family: "Josefin Sans", sans-serif;
+  font-size: xx-large;
   height: 200vh;
 }
 main nav {
@@ -60,19 +60,20 @@ main .options, main .name {
 
 #about, #projects, #cv, #contact {
   padding: 40px;
+  font-size: 4vh;
   width: 40vw;
-  height: 100vh;
+  height: calc(100vh - 80px);
 }
 #about .projects-list, #projects .projects-list, #cv .projects-list, #contact .projects-list {
+  padding: 10px;
   font-size: smaller;
   flex-direction: column;
   display: flex;
-  padding-bottom: 20px;
 }
 #about .projects-list a, #projects .projects-list a, #cv .projects-list a, #contact .projects-list a {
   cursor: pointer;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 #about .subsection, #projects .subsection, #cv .subsection, #contact .subsection {
   padding-bottom: 20px;
@@ -151,8 +152,8 @@ form textarea {
   width: 80%;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  min-height: 200px;
-  max-height: 400px;
+  min-height: 16vh;
+  max-height: 20vh;
   resize: vertical;
   border: none;
   overflow: auto;
@@ -188,7 +189,8 @@ a:hover .description {
 }
 
 .description {
-  font-size: large;
+  margin-top: 10px;
+  font-size: smaller;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.6s ease-in-out;
@@ -199,17 +201,19 @@ a:hover .description {
   display: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   #about, #projects, #cv, #contact {
-    width: 50vw;
+    width: 50.5vw;
+    font-size: 2.6vw;
   }
 }
-@media screen and (max-width: 760px) {
+@media (max-width: 800px) {
   #about, #projects, #cv, #contact {
     width: auto;
+    height: auto;
   }
   main {
-    font-size: 5vw;
+    font-size: 1rem;
   }
   main nav {
     width: 0px;
@@ -238,7 +242,7 @@ a:hover .description {
     border-top: 32px solid white;
     position: absolute;
     left: calc(50% - 20px);
-    top: calc(100vh - 60px);
+    top: calc(100vh - 40px);
     -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
             animation: downarrow 0.6s infinite alternate ease-in-out;
   }
@@ -261,5 +265,30 @@ a:hover .description {
   100% {
     -webkit-transform: translateY(0.8em);
     opacity: 1;
+  }
+}
+.project-name {
+  display: flex;
+  align-items: baseline;
+}
+.project-name .unwrap-arrow {
+  margin-right: 6px;
+  border-bottom: 0.3em solid transparent;
+  border-top: 0.3em solid transparent;
+  border-left: 0.6em solid white;
+}
+
+@media (max-height: 600px) {
+  #about, #projects, #cv, #contact {
+    font-size: 1rem;
+  }
+  #contact form textarea {
+    min-height: 6vh;
+    max-height: 6vh;
+  }
+}
+@media (max-height: 400px) {
+  #about, #projects, #cv, #contact {
+    font-size: 0.7rem;
   }
 }/*# sourceMappingURL=style.css.map */
