--- a/style.css
+++ b/style.css
@@ -289,6 +289,6 @@ a:hover .description {
 }
 @media (max-height: 400px) {
   #about, #projects, #cv, #contact {
-    font-size: 0.7rem;
+    height: auto;
   }
 }/*# sourceMappingURL=style.css.map */
