--- a/style.scss
+++ b/style.scss
@@ -139,14 +139,16 @@ a:hover .description{
   max-height: 500px;
   transition: max-height 0.6s ease-in-out;
 }
+#projects a:hover .project-name .unwrap-arrow{
+  transform: rotate(90deg);
+}
 
 .description{
   margin-top: 10px;
   font-size: smaller;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.6s ease-in-out;
-  transition-delay: 0.1s;
+  transition: max-height 0.5s ease-in-out;
 }
 .mobile-arrow{
   display: none;
@@ -202,6 +204,7 @@ a:hover .description{
   display: flex;
   align-items: baseline;
   .unwrap-arrow{
+    transition: transform 0.25s ease-in-out;
     margin-right: 6px;
     border-bottom:0.3em solid transparent;
     border-top: 0.3em solid transparent;
@@ -220,7 +223,5 @@ a:hover .description{
 }
 
 @media (max-height: 400px){
-  #about, #projects, #cv, #contact{
-    height: auto;
-  }
+  #about, #projects, #cv, #contact{height: auto;}
 }
